updates current leads, updates member count, adds libhal sponsor - wip

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=-NhHU-igwMQ" target="_blank" rel="noopener noreferrer" class="btn-watch-video" >Most Recent Update<i class="icofont-play-alt-2"></i></a>
+        <a href="https://www.youtube.com/watch?v=-NhHU-igwMQ" target="_blank" rel="noopener noreferrer"
+          class="btn-watch-video">Most Recent Update<i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
     <!-- <img id="video" class="hidden-xs hidden-sm img-fluid" src="assets/img/gallery/current-team.jpeg" alt="" /> -->
@@ -210,12 +211,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/santosh-dasari/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="Picture of club President" />
+                  <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="Picture of club President" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Santosh Dasari</h4>
+                  <h4>Corey Kelley</h4>
                   <span>President</span>
                 </div>
               </div>
@@ -254,13 +256,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/ashleym-mercurio/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid"
-                      alt="Picture of Science lead" />
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="Picture of Science lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Ashley Marie Mercurio</h4>
+                  <h4>Nourdean Shraim</h4>
                   <span>Science Lead</span>
                 </div>
               </div>
@@ -269,12 +270,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/marco-koch-011a031b1/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="Picture of Mechanical lead" />
+                  <a href="https://www.linkedin.com/in/mayaenriquez" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Marco Koch</h4>
+                  <h4>Maya Enriquez</h4>
                   <span>Mechanical Lead</span>
                 </div>
               </div>
@@ -299,14 +300,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
-                    rel="noopener noreferrer">
-                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid"
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
                       alt="Picture of Control Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Corey Kelley</h4>
+                  <h4>Viha Shah</h4>
                   <span>Control Systems Lead</span>
                 </div>
               </div>
@@ -315,13 +315,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/nathanaelrgarza/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/nathanael-garza.png" class="img-fluid"
+                  <a href="https://www.linkedin.com/in/evan-astle/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
                       alt="Picture of Mission Control lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Nathanael Garza</h4>
+                  <h4>Evan Astle</h4>
                   <span>Mission Control Lead</span>
                 </div>
               </div>
@@ -330,13 +330,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/adrien-carrou/" target="_blank" rel="noopener noreferrer">
+                  <a href="" target="_blank" rel="noopener noreferrer">
                     <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
                       alt="Picture of Intelligent Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Adrien Carrou</h4>
+                  <h4>Maaz Adil</h4>
                   <span>Intelligent Systems Lead</span>
                 </div>
               </div>
@@ -360,7 +360,7 @@
           }
         </style>
         <h2>Team Status</h2>
-        <h6>Updated: November 2022</h6>
+        <h6>Updated: August 2023</h6>
         <div class="general-row justify-content-end">
           <div class="col-lg-11">
             <div class="general-row">
@@ -368,7 +368,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">10</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -376,7 +376,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">8</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -384,7 +384,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">15</span>
+                  <span data-toggle="counter-up">9</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -392,7 +392,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">4</span>
+                  <span data-toggle="counter-up">5</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -400,7 +400,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">3</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -416,7 +416,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-test-tube-alt"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Science</p>
                 </div>
               </div>
@@ -618,6 +618,10 @@
 
           <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
+          </div>
+
+          <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <img src="assets/img/sponsors/libhal.png" class="img-fluid" alt="Libhal">
           </div>
         </row>
 
