--- a/past-leads.html
+++ b/past-leads.html
@@ -86,6 +86,145 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
 
+            <section id="leads-2022-2023">
+              <h2>2022 - 2023</h2>
+              <row class="general-row">
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/santosh-dasari/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/santosh-dasari.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Santosh Dasari</h4>
+                      <span>President</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/mattheward/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Matthew Ard</h4>
+                      <span>Treasurer</span>
+                    </div>
+                  </div>
+                </div>
+              </row>
+              <row class="general-row">
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/shveta-ram-42357121b/" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="assets/img/leads/shveta-ram.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Shveta Ram</h4>
+                      <span>Business Lead</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/ashleym-mercurio/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid"
+                          alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Ashley Marie Mercurio</h4>
+                      <span>Science Lead</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/marco-koch-011a031b1/" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="assets/img/leads/marco-koch.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Marco Koch</h4>
+                      <span>Mechanical Lead</span>
+                    </div>
+                  </div>
+                </div>
+              </row>
+              <row class="general-row">
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/bclaveria/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/brandon-claveria.png" class="img-fluid"
+                          alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Brandon Claveria</h4>
+                      <span>Electrical Lead</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
+                        rel="noopener noreferrer">
+                        <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Corey Kelley</h4>
+                      <span>Control Systems Lead</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/nathanaelrgarza/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/nathanael-garza.png" class="img-fluid"
+                          alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Nathanael Garza</h4>
+                      <span>Mission Control Lead</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2">
+                  <div class="member" data-aos="fade-up" data-aos-delay="100">
+                    <div class="pic">
+                      <a href="https://www.linkedin.com/in/adrien-carrou/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="Picture of former lead" />
+                      </a>
+                    </div>
+                    <div class="member-info">
+                      <h4>Adrien Carrou</h4>
+                      <span>Intelligent Systems Lead</span>
+                    </div>
+                  </div>
+                </div>
+              </row>
+            </section>
+
             <section id="leads-2021-2022">
               <h2>2021 - 2022</h2>
               <row class="general-row">
