updates controls lead and adds maaz pic to website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
-  <link
+  <linkm
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
     rel="stylesheet">
 
@@ -257,7 +257,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="Picture of Science lead" />
+                    <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of Science lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -271,7 +271,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/mayaenriquez" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid" alt="Picture of Mechanical lead" />
+                    <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -301,12 +301,12 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
+                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid"
                       alt="Picture of Control Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Viha Shah</h4>
+                  <h4>Corey Kelley</h4>
                   <span>Control Systems Lead</span>
                 </div>
               </div>
@@ -316,7 +316,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/evan-astle/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
+                    <img src="assets/img/leads/default.png" class="img-fluid"
                       alt="Picture of Mission Control lead" />
                   </a>
                 </div>
@@ -331,7 +331,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/adrien-carrou.png" class="img-fluid"
+                    <img src="assets/img/leads/maaz-adil.png" class="img-fluid"
                       alt="Picture of Intelligent Systems lead" />
                   </a>
                 </div>
