Update leads, teams, and links for sponsors

--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/corey-kelley-a08623230/" target="_blank"
+                  <a href="https://www.linkedin.com/in/mayaenriquez/" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid" alt="Picture of club President" />
+                    <img src="assets/img/leads/maya-enriquez.png" class="img-fluid" alt="Picture of club President" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Corey Kelley</h4>
+                  <h4>Maya Enriquez</h4>
                   <span>President</span>
                 </div>
               </div>
@@ -242,12 +242,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/shveta-ram-42357121b/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/shveta-ram.png" class="img-fluid" alt="Picture of Business lead" />
+                  <a href="https://www.linkedin.com/in/erin-gribi/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/erin-gribi.png" class="img-fluid" alt="Picture of Business lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Shveta Ram</h4>
+                  <h4>Erin Gribi</h4>
                   <span>Business Lead</span>
                 </div>
               </div>
@@ -256,12 +256,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of Science lead" />
+                  <a href="www.linkedin.com/in/graysonspangenberg/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/samuel-grayson-spangenberg.png" class="img-fluid" alt="Picture of Science lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Nourdean Shraim</h4>
+                  <h4>Samuel Grayson Spangenberg</h4>
                   <span>Science Lead</span>
                 </div>
               </div>
@@ -270,8 +270,8 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/mayaenriquez" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/default.png" class="img-fluid" alt="Picture of Mechanical lead" />
+                  <a href="https://www.linkedin.com/in/mayaenriquez/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/maya-enriquez.png" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
@@ -285,13 +285,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/bclaveria/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/brandon-claveria.png" class="img-fluid"
+                  <a href="" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/default.png" class="img-fluid"
                       alt="Picture of Electrical lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Brandon Claveria</h4>
+                  <h4>Shin Umeda</h4>
                   <span>Electrical Lead</span>
                 </div>
               </div>
@@ -300,13 +300,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/corey-kelley.png" class="img-fluid"
+                  <a href="https://www.linkedin.com/in/viha-shah/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/viha-shah.png" class="img-fluid"
                       alt="Picture of Control Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Corey Kelley</h4>
+                  <h4>Viha Shah</h4>
                   <span>Control Systems Lead</span>
                 </div>
               </div>
@@ -316,7 +316,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="https://www.linkedin.com/in/evan-astle/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/default.png" class="img-fluid"
+                    <img src="assets/img/leads/evan-astle.png" class="img-fluid"
                       alt="Picture of Mission Control lead" />
                   </a>
                 </div>
@@ -368,7 +368,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">4</span>
+                  <span data-toggle="counter-up">8</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -376,7 +376,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">8</span>
+                  <span data-toggle="counter-up">6</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -384,7 +384,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">9</span>
+                  <span data-toggle="counter-up">11</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -392,7 +392,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">9</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -400,7 +400,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">4</span>
+                  <span data-toggle="counter-up">5</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -408,7 +408,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">2</span>
+                  <span data-toggle="counter-up">5</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -593,35 +593,51 @@
         <h2>Sponsors</h2>
         <row class="row">
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
+            <a href="https://www.sjsu.edu/engineering/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/SJSU-ENGR.png" class="img-fluid" alt="San Jose State Engineering Department">
+            </a>
+          </div>
+          
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="https://www.sjsu.edu/as/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="SJSU Associated Students">
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/SJSU-AS.png" class="img-fluid" alt="SJSU Associated Students">
+            <a href="https://about.google/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/google.png" class="img-fluid" alt="Google">
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/google.png" class="img-fluid" alt="Google">
+            <a href="https://www.protocase.com/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
+            <a href="https://www.hamamatsu.com/jp/en.html" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="Hamamatsu">
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/hamamatsu.png" class="img-fluid" alt="Hamamatsu">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/industrial-metal-supply.png" class="img-fluid" alt="Industrial Metal Supply">
+            <a href="https://www.industrialmetalsupply.com/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/industrial-metal-supply.png" class="img-fluid" alt="Industrial Metal Supply">
+            </a>
           </div>
 
           <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
+            <a href="https://github.com/kammce/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/khalil.png" class="img-fluid" alt="Kammace">
+            </a>
           </div>
 
           <div class=" col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/sponsors/libhal.png" class="img-fluid" alt="Libhal">
+            <a href="https://github.com/libhal/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/libhal.png" class="img-fluid" alt="Libhal">
+            </a>
           </div>
         </row>
 
