--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Samuel Grayson Spangenberg</h4>
+                  <h4>Samuel Grayson <br />Spangenberg</h4>
                   <span>Science Lead</span>
                 </div>
               </div>
@@ -270,12 +270,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/mayaenriquez/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/maya-enriquez.png" class="img-fluid" alt="Picture of Mechanical lead" />
+                  <a href="https://www.linkedin.com/in/brett-higginbotham-43468a24a/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/brett-higginbotham.png" class="img-fluid" alt="Picture of Mechanical lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Maya Enriquez</h4>
+                  <h4>Brett Higginbotham</h4>
                   <span>Mechanical Lead</span>
                 </div>
               </div>
@@ -286,7 +286,7 @@
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
                   <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/default.png" class="img-fluid"
+                    <img src="assets/img/leads/shin-umeda.png" class="img-fluid"
                       alt="Picture of Electrical lead" />
                   </a>
                 </div>
@@ -557,12 +557,12 @@
 
               <div class="col-md-12">
                 <div class="info-box">
-                  <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">
+                  <a href="https://forms.gle/U8yjsuCQRPLBEfwN9" target="_blank" onClick="gtag('event','sign_up')">
                     <i class="bx bx-edit"></i>
                   </a>
                   <h3>Want to Join?</h3>
                   <p>Tryouts held every fall semester</p>
-                  <a href="https://forms.gle/Bfp9JQMfPSsHxMft8" target="_blank" onClick="gtag('event','sign_up')">
+                  <a href="https://forms.gle/U8yjsuCQRPLBEfwN9" target="_blank" onClick="gtag('event','sign_up')">
                     Sign Up Form
                   </a>
                 </div>
