--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <a href="https://www.protocase.com/" target="_blank" rel="noopener noreferrer">
-              <img src="assets/img/sponsors/protocase.png" class="img-fluid" alt="Protocase">
+            <a href="https://www.bergmanprototype.com/" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/sponsors/bergman_prototyping.png" class="img-fluid" alt="Bergman Prototyping">
             </a>
           </div>
 
