:bento: updated 2024-2025 leads and updated past leads

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <br>
       <h2 id="sub-slogan">A group of students at San Jose State University</h2>
       <div class="d-flex">
-        <a href="https://www.youtube.com/watch?v=-NhHU-igwMQ" target="_blank" rel="noopener noreferrer"
+        <a href="https://youtu.be/p9IgvPNhNVU?feature=shared" target="_blank" rel="noopener noreferrer"
           class="btn-watch-video">Most Recent Update<i class="icofont-play-alt-2"></i></a>
       </div>
     </div>
@@ -145,7 +145,7 @@
                 alt="Rover with SJSU Robotics flag">
               <div class="card-body">
                 <h5 class="card-title"><a>Current Project</a></h5>
-                <p class="card-text">This year the team is aiming to compete in the <b>2024 University Rover
+                <p class="card-text">This year the team is aiming to compete in the <b>2025 University Rover
                     Challenge</b>. We are building a Mars rover that can perform certain tasks such as detect life,
                   traverse rough terrain autonomously, and turn levers, flip switches, and move heavy
                   objects on its own.
@@ -203,7 +203,7 @@
             }
           </style>
           <h3>Meet Our Leads</h3>
-          <h2>2023 - 2024</h2>
+          <h2>2024 - 2025</h2>
         </div>
         <section id="leads-2022-2023">
 
@@ -315,13 +315,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/evan-astle/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/evan-astle.png" class="img-fluid"
+                  <a href="https://www.linkedin.com/in/ninawang04/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/nina-wang.png" class="img-fluid"
                       alt="Picture of Mission Control lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Evan Astle</h4>
+                  <h4>Nina Wang</h4>
                   <span>Mission Control Lead</span>
                 </div>
               </div>
@@ -330,13 +330,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/maaz-adil.png" class="img-fluid"
+                  <a href="" target="https://www.linkedin.com/in/christopher-eliot-hall/" rel="noopener noreferrer">
+                    <img src="assets/img/leads/eliot-hall.png" class="img-fluid"
                       alt="Picture of Intelligent Systems lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Maaz Adil</h4>
+                  <h4>Eliot Hall</h4>
                   <span>Intelligent Systems Lead</span>
                 </div>
               </div>
