--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="" target="_blank" rel="noopener noreferrer">
+                  <a href="https://www.linkedin.com/in/shin-umeda-39481024b/" target="_blank" rel="noopener noreferrer">
                     <img src="assets/img/leads/shin-umeda.png" class="img-fluid"
                       alt="Picture of Electrical lead" />
                   </a>
@@ -368,7 +368,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-gears"></i>
-                  <span data-toggle="counter-up">8</span>
+                  <span data-toggle="counter-up">11</span>
                   <p>Mechanical</p>
                 </div>
               </div>
@@ -376,7 +376,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-chart-flow-2"></i>
-                  <span data-toggle="counter-up">6</span>
+                  <span data-toggle="counter-up">7</span>
                   <p>Electrical</p>
                 </div>
               </div>
@@ -384,7 +384,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-binary"></i>
-                  <span data-toggle="counter-up">11</span>
+                  <span data-toggle="counter-up">7</span>
                   <p>Control Systems</p>
                 </div>
               </div>
@@ -392,7 +392,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-brain"></i>
-                  <span data-toggle="counter-up">9</span>
+                  <span data-toggle="counter-up">4</span>
                   <p>Intelligent Systems</p>
                 </div>
               </div>
@@ -400,7 +400,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-computer"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Mission Control</p>
                 </div>
               </div>
@@ -408,7 +408,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="icofont-dashboard-web"></i>
-                  <span data-toggle="counter-up">5</span>
+                  <span data-toggle="counter-up">2</span>
                   <p>Business</p>
                 </div>
               </div>
@@ -439,9 +439,9 @@
           </div>
 
           <div class="gallery-item">
-            <img src="assets/img/gallery/current-leads.jpeg" class="gallery-img"
-              alt="Picture of current 2024 Robotics leads">
-            Current Leads
+            <img src="assets/img/gallery/talking-open-sauce.jpg" class="gallery-img"
+              alt="Open Sauce 2024 Group Picture">
+            Open Sauce 2024
           </div>
 
           <div class="gallery-item">
@@ -551,6 +551,10 @@
                   <h3>Email Us</h3>
                   <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">
                     sjsurobotics@gmail.com
+                  </a>
+                  <h3>Discord</h3>
+                  <a href="https://discord.gg/p6pWcrYAmv" target="_blank">
+                    https://discord.gg/p6pWcrYAmv
                   </a>
                 </div>
               </div>
