removed google form

--- a/index.html
+++ b/index.html
@@ -552,22 +552,18 @@
                   <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=sjsurobotics@gmail.com" target="_blank">
                     sjsurobotics@gmail.com
                   </a>
-                  <h3>Discord</h3>
-                  <a href="https://discord.gg/p6pWcrYAmv" target="_blank">
-                    https://discord.gg/p6pWcrYAmv
-                  </a>
                 </div>
               </div>
 
               <div class="col-md-12">
                 <div class="info-box">
                   <a href="https://forms.gle/U8yjsuCQRPLBEfwN9" target="_blank" onClick="gtag('event','sign_up')">
-                    <i class="bx bx-edit"></i>
+                    <i class="bx bxl-discord"></i>
                   </a>
                   <h3>Want to Join?</h3>
                   <p>Tryouts held every fall semester</p>
-                  <a href="https://forms.gle/U8yjsuCQRPLBEfwN9" target="_blank" onClick="gtag('event','sign_up')">
-                    Sign Up Form
+                  <a href="https://discord.gg/p6pWcrYAmv" target="_blank">
+                    Trial Project Discord
                   </a>
                 </div>
               </div>
