--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/mayaenriquez/" target="_blank"
+                  <a href="www.linkedin.com/in/graysonspangenberg/" target="_blank"
                     rel="noopener noreferrer">
-                    <img src="assets/img/leads/maya-enriquez.png" class="img-fluid" alt="Picture of club President" />
+                    <img src="assets/img/leads/samuel-grayson-spangenberg.png" class="img-fluid" alt="Picture of club President" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Maya Enriquez</h4>
-                  <span>President</span>
+                  <h4>Samuel Grayson <br />Spangenberg</h4>
+                  <span>President <br /> Business Lead</span>
                 </div>
               </div>
             </div>
@@ -226,12 +226,12 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/mattheward/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/mattew-ard.png" class="img-fluid" alt="Picture of club Treasurer" />
+                  <a href="https://www.linkedin.com/in/kirthika-ashokkumar-4233442b6/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/kirthika-ashokkumar.png" class="img-fluid" alt="Picture of club Treasurer" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Matthew Ard</h4>
+                  <h4>Kirthika Ashokkumar</h4>
                   <span>Treasurer</span>
                 </div>
               </div>
@@ -242,27 +242,13 @@
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
-                  <a href="https://www.linkedin.com/in/erin-gribi/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/erin-gribi.png" class="img-fluid" alt="Picture of Business lead" />
+                  <a href="https://www.linkedin.com/in/ashleym-mercurio/" target="_blank" rel="noopener noreferrer">
+                    <img src="assets/img/leads/ashley-marie-mercurio.png" class="img-fluid" alt="Picture of Science lead" />
                   </a>
                 </div>
                 <div class="member-info">
-                  <h4>Erin Gribi</h4>
-                  <span>Business Lead</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-2">
-              <div class="member" data-aos="fade-up" data-aos-delay="100">
-                <div class="pic">
-                  <a href="www.linkedin.com/in/graysonspangenberg/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/img/leads/samuel-grayson-spangenberg.png" class="img-fluid" alt="Picture of Science lead" />
-                  </a>
-                </div>
-                <div class="member-info">
-                  <h4>Samuel Grayson <br />Spangenberg</h4>
-                  <span>Science Lead</span>
+                  <h4>Ashley Marie Mercurio</h4>
+                  <span>Science Lead <br /> Safety Officer</span>
                 </div>
               </div>
             </div>
@@ -280,8 +266,7 @@
                 </div>
               </div>
             </div>
-          </row>
-          <row class="general-row">
+
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
@@ -296,7 +281,9 @@
                 </div>
               </div>
             </div>
+          </row>
 
+          <row class="general-row">
             <div class="col-lg-2">
               <div class="member" data-aos="fade-up" data-aos-delay="100">
                 <div class="pic">
